--- a/BuyTicketsHW2024/gradle/wrapper/gradle-wrapper.properties
+++ b/BuyTicketsHW2024/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Apr 24 13:06:36 CST 2024
+#Thu Apr 25 16:00:07 GMT+08:00 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.2.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
